add link to teleconsult2

--- a/teleconsultation.html
+++ b/teleconsultation.html
@@ -117,6 +117,10 @@
             });
             calendar.render();
         });
+
+        function joinVideoCall() {
+        window.location.href = "teleconsult2.html";
+    }
     </script>
 </body>
 </html>
